[tool.poetry]
name = "pyettj"
version = "0.3.4"
description = "Coletar e tratar dados de curvas de juros (ettj)."
authors = ["Rafael Rodrigues <rafael.rafarod@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyettj", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = [
    {version = ">=2.2.3", python = ">=3.10"}
]
requests = "^2.32.3"
lxml = "^5.3.0"
bs4 = "^0.0.2"
nelson-siegel-svensson = "^0.5.0"
numpy = [
    {version = ">=1.26.0", python = ">=3.10"}
]
scipy = [
    {version = ">=1.13.1", python = ">=3.10"}
]
bizdays = [
    {version = ">=1.0.16", python = ">=3.10"}
]
matplotlib = [
    {version = ">=3.10.0", python = ">=3.10"}
]
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"