[tool.poetry]
name = "pyettj"
version = "0.4.0"
description = "Coletar, tratar dados de curvas de juros (ettj) com dados da B3 e ANBIMA e modelar curvas com nielson-svensson e HJM"
authors = ["Rafael Rodrigues <rafael.rafarod@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rafa-rod/pyettj"
homepage = "https://github.com/rafa-rod/pyettj"
keywords = ["curva", "ettj", "risk-management", "juros", "svensson", "mercado-financeiro", "hjm", "anbima", "yield-curve", "financial-market", "quant", "quantitative-finance",
            "finance", "estresse", "Heath-Jarrow-Morton", "cenario-estresse", "stress-test"]
packages = [
    { include = "pyettj", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.2.3"
requests = "^2.32.3"
nelson-siegel-svensson = "^0.5.0"
numpy = ">=1.26.0"
scipy = ">=1.13.1"
matplotlib = ">=3.10.0"
urllib3 = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["src/pyettj"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
omit = ["tests/*"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if .debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]